improved equals methods